2013-09-03  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* include/ajax/remote_validations.php: Fixed an error on a
	validation that does not return anything.
	
	* include/ajax/users.php: Now this file can return the
	company id of an user via ajax.
	
	* operation/side_menu.php: Now the workorder listing is
	filtered by default by the actual user as the owner.
	
	* operation/incidents/incident_detail.php: Added an script.
	
	* operation/leads/lead_detail.php: Now is possible to save and
	load custom searches in the leads section. Added a datepicker.
	Fixed some javascript errors related with the form validation.
	Now the 'Managed By' select changes automatically to the company
	of the owner when the owner changes.
	
	* operation/projects/task_detail.php: Fixed an error related
	with the validation of the name of a task.
	
	* operation/projects/task_planning.php: Rewrited the code of the
	forms to make it less complex and solve some errors.
	
2013-09-02  Dario Rodriguez <dario@artica.es>

	* include/js/integria_incident_search.js,
	* include/ajax/incidents.php: Added function to select 
	contact on incident view.
	* operation/incidents/incident_detail.php: Change layout of 
	advanced detail form. Added new feature to select contact email
	using a popup.
	* operation/contacts/contact_detail.php: Added id to form.

2013-09-02  Dario Rodriguez <dario@artica.es>

	* operation/incidents/incident_detail.php: Deleted a wrong
	comment which appear in html view.
	* include/js/integria_incident_search.js: Fixed some problems
	with layout of custom fields.

2013-08-30  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* godmode/setup/setup.php: Improved the description of the
	config token "lead_company_filter".
	
	* godmode/usuarios/configurar_usuarios.php: Added translation
	function for the 'none' value of the language select.
	
	* include/functions_calendar.php: Changed the task icon.
	Fixed an error on the add entry button of the calendar days